# neonufft

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: config.h.in  neonufftConfig.cmake  neonufftConfigVersion.cmake  neonufftSharedConfig.cmake  neonufftStaticConfig.cmake  neonufftTargets.cmake
cmake/modules/: FindFFTW.cmake  FindFFTWF.cmake  FindFINUFFT.cmake
contrib/: CMakeLists.txt
contrib/es_kernel/: es_kernel_horner_coeff.cpp  es_kernel_horner_coeff.hpp  es_kernel_horner_coeff_125.cpp  es_kernel_horner_coeff_125.hpp  util.hpp
contrib/legendre_rule/: legendre_rule_fast.cpp
include/neonufft/: allocator.hpp  enums.h  errors.h  exceptions.hpp  plan.hpp  types.hpp
include/neonufft/gpu/: device_allocator.hpp  plan.hpp  types.hpp
src/: CMakeLists.txt  es_kernel_param.hpp  plan.cpp  plan_impl.hpp  plan_t3_impl.hpp
src/contrib/: CMakeLists.txt
src/contrib/es_kernel/: LICENSE  es_kernel_horner_coeff.cpp  es_kernel_horner_coeff.hpp  es_kernel_horner_coeff_125.cpp  es_kernel_horner_coeff_125.hpp  util.hpp
src/contrib/legendre_rule/: legendre_rule_fast.cpp  legendre_rule_fast.hpp
src/gpu/: CMakeLists.txt  device_allocator.cpp  plan.cpp  plan_impl.hpp
src/gpu/kernels/: interpolation_kernel.cu  interpolation_kernel.hpp  upsample_kernel.cu  upsample_kernel.hpp
src/gpu/memory/: copy.hpp  device_array.hpp  device_view.hpp
src/gpu/util/: fft_api.hpp  fft_grid.cpp  fft_grid.hpp  runtime.hpp  runtime_api.hpp
src/kernels/: compute_postphase_kernel.cpp  compute_postphase_kernel.hpp  compute_prephase_kernel.cpp  downsample_kernel.cpp  downsample_kernel.hpp  es_kernel_eval.hpp  fold_padding.cpp  fold_padding.hpp  hwy_dispatch.hpp  interpolation_kernel.cpp  interpolation_kernel.hpp  min_max_kernel.cpp  nuft_real_kernel.cpp  nuft_real_kernel.hpp  rescale_loc_kernel.cpp  rescale_loc_kernel.hpp  spreading_kernel.cpp  spreading_kernel.hpp  upsample_kernel.cpp  upsample_kernel.hpp
src/memory/: array.cpp  array.hpp  copy.hpp  view.hpp
src/neonufft/: CMakeLists.txt  es_kernel_param.hpp  plan.cpp  plan_impl.hpp  plan_t3_impl.hpp
src/neonufft/gpu/: CMakeLists.txt  device_allocator.cpp  plan.cpp  plan_impl.hpp  plan_t3_impl.hpp
src/neonufft/gpu/kernels/: downsample_kernel.cu  downsample_kernel.hpp  es_kernel_eval.cuh  fseries_kernel.cu  fseries_kernel.hpp  interpolation_kernel.cu  interpolation_kernel.hpp  legendre_rule.cuh  legendre_rule_kernel.cu  min_max_kernel.cu  min_max_kernel.hpp  postphase_f_series.cu  postphase_kernel.cu  postphase_kernel.hpp  prephase_kernel.cu  prephase_kernel.hpp  rescale_loc_kernel.cu  rescale_loc_kernel.hpp  spreading_kernel.cu  spreading_kernel.hpp  upsample_kernel.cu  upsample_kernel.hpp
src/neonufft/gpu/memory/: copy.hpp  device_array.hpp  device_view.hpp
src/neonufft/gpu/util/: cub_api.hpp  fft_api.hpp  fft_grid.cpp  fft_grid.hpp  kernel_launch_grid.hpp  partition_group.hpp  runtime.hpp  runtime_api.hpp
src/neonufft/kernels/: compute_postphase_kernel.cpp  compute_prephase_kernel.cpp  compute_prephase_kernel.hpp  downsample_kernel.cpp  downsample_kernel.hpp  es_kernel_eval.hpp  fold_padding.cpp  fold_padding.hpp  fseries_kernel.cpp  fseries_kernel.hpp  interpolation_kernel.cpp  interpolation_kernel.hpp  min_max_kernel.cpp  min_max_kernel.hpp  nuft_real_kernel.cpp  nuft_real_kernel.hpp  rescale_loc_kernel.cpp  rescale_loc_kernel.hpp  spreading_kernel.cpp  spreading_kernel.hpp  upsample_kernel.cpp  upsample_kernel.hpp
src/neonufft/memory/: array.cpp  array.hpp  copy.hpp  view.hpp
src/neonufft/threading/: thread_pool.cpp  thread_pool.hpp
src/neonufft/util/: fft_grid.cpp  fft_grid.hpp  func_attributes.hpp  grid_info_t3.hpp  index_array.hpp  math.hpp  partition_group.hpp  point.hpp  spread_padding.hpp  stack_array.hpp  zorder.hpp
src/threading/: thread_pool.cpp  thread_pool.hpp
src/util/: fft_grid.cpp  fft_grid.hpp  partition_group.hpp  point.hpp  spread_padding.hpp  zorder.hpp
tests/: CMakeLists.txt  nuft_direct_kernels.cpp  nuft_direct_kernels.hpp  test_postphase.cpp  test_prephase.cpp  test_thread_pool.cpp  test_thread_pool.hpp  test_type_1.cpp  test_type_1_2.cpp  test_type_2.cpp  test_type_3.cpp
